crystal-facet-uml (1.52.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Redesign of file-menu icons
  * Lifelines are deleted when the diagram type changes to non-interaction
  * TODO: count the changes (correctly) and display when changing diag type

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 26 Aug 2023 08:00:00 +0200

crystal-facet-uml (1.51.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Redesign of view-mode icons and stereotype icon
  * No overlap of stereotype icon with comment-corner
  * classifiers of unknown (future) type are drawn as cornerless box and logged
    as anomaly
  * features, relationships, diagrams of unknown type are just anomalies
  * The stereotype field is labelled as such. Exceptions are stated only in the
    user manual.
  * stereotype images are also drawn for diagrams, features and relationships
  * linebreaks in relationship and feature labels
  * the compartment separators in use cases do not exceed the outer circle
  * layouting quality improved to:
    layout_good_cases: ERR=0, W/C=6, W/F=17, W/R=33
    layout_challenging_cases: ERR=29, W/C=8260, W/F=6415, W/R=4662

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 26 Aug 2023 07:00:00 +0200

crystal-facet-uml (1.50.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram titles do not touch the diagram elements anymore
  * The win version includes libgcc_s_seh-1.dll and libwinpthread-1.dll
    into the distribution package
  * The res icon is part of the exe file

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 03 Jun 2023 10:00:00 +0200

crystal-facet-uml (1.50.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * IDs of classifiers are not shown anymore, names are already unique
  * Stereotype-Images: svg-path use fill and stroke colors to draw
  * in stereotype images, the svg path data may be stated in single-quotes
  * if a stereotype image is drawn, the stereotype name is not drawn
