@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 1,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.51.1"
+    "generator_version": "1.52.0"
   }
   ,
   "views":
@@ -125,7 +125,7 @@
         "id": 4,
         "diagram_type": 10,
         "type": "UMLUseCaseDiagram",
-        "name": "Use cases to address",
+        "name": "Use Cases on Diagrams",
         "description": [
                 "This diagram lists the main features of crystal facet uml."
         ],
@@ -212,7 +212,7 @@
         "id": 56,
         "diagram_type": 10,
         "type": "UMLUseCaseDiagram",
-        "name": "Newly identified Use-Cases",
+        "name": "Use Cases on Data Model",
         "description": [
                 "During development, new use cases are identified."
         ],
@@ -260,7 +260,7 @@
         "id": 108,
         "diagram_type": 10,
         "type": "UMLUseCaseDiagram",
-        "name": "Export Use-Cases",
+        "name": "Export Use Cases",
         "description": [
                 ""
         ],
@@ -1874,8 +1874,8 @@
     {
       "diagram": {
         "id": 107,
-        "diagram_type": 31,
-        "type": "UMLComponentDiagram",
+        "diagram_type": 34,
+        "type": "UMLClassDiagram",
         "name": "ctrl: consistency",
         "description": [
                 ""
@@ -16233,7 +16233,7 @@
         ],
         "x_order": 759784271,
         "y_order": -1887735867,
-        "list_order": -1887735867,
+        "list_order": -1041109699,
         "uuid": "56172679-9b7a-443e-99b4-dd0918e6362b",
         "features":
         [
@@ -16252,7 +16252,7 @@
         ],
         "x_order": 759784271,
         "y_order": -1882340401,
-        "list_order": -1882340401,
+        "list_order": 84802133,
         "uuid": "6d669208-0eaa-4797-b927-86cd05d7ab88",
         "features":
         [
